Add form validation

--- a/ui/controls/cascading-list.reel/cascading-list-item.reel/cascading-list-item.html
+++ b/ui/controls/cascading-list.reel/cascading-list-item.reel/cascading-list-item.html
@@ -11,7 +11,8 @@
                 "content": {"@": "content"}
             },
             "bindings": {
-                "selectedObject": {"<->": "@content.component.selectedObject"}
+                "selectedObject": {"<->": "@content.component.selectedObject"},
+                "classList.has('has-error')": {"<-": "@owner.error.defined()"}
             }
         },
         "title": {
