--- a/ui/controls/inspector-footer.reel/inspector-footer.html
+++ b/ui/controls/inspector-footer.reel/inspector-footer.html
@@ -40,6 +40,7 @@
                 "value": "Save"
             },
             "bindings": {
+                "disabled": {"<-": "!@owner.isSaveEnabled"},
                 "classList.has('is-visible')": {"<-": "@owner.canSave"}
             }
         }
