Switch isSaveEnabled to isSaveDisabled in inspector

--- a/ui/controls/inspector-footer.reel/inspector-footer.html
+++ b/ui/controls/inspector-footer.reel/inspector-footer.html
@@ -40,7 +40,7 @@
                 "value": "Save"
             },
             "bindings": {
-                "disabled": {"<-": "!@owner.isSaveEnabled"},
+                "disabled": {"<-": "@owner.isSaveDisabled"},
                 "classList.has('is-visible')": {"<-": "@owner.canSave"}
             }
         }
