Use isSaveDisabled in volume creator

--- a/ui/inspectors/volume-creator.reel/volume-creator.html
+++ b/ui/inspectors/volume-creator.reel/volume-creator.html
@@ -21,11 +21,12 @@
                 "element": {"#": "inspector"},
                 "canRevert": true,
                 "scrollViewDelegate": {"@": "owner"},
-                "controller": {"@": "owner"}
+                "controller": {"@": "owner"},
+                "canSave": true
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
-                "canSave": {"<-": "@name.value.length > 0"}
+                "isSaveDisabled": {"<-": "@owner.object.topology.data.length == 0"}
             }
         },
 
@@ -34,6 +35,7 @@
             "properties": {
                 "element": {"#": "name"},
                 "label": "Name",
+                "validationPath": "id",
                 "placeholderValue": "enter volume name"
             },
             "bindings": {
