--- a/ui/inspectors/system-section.reel/system-section.html
+++ b/ui/inspectors/system-section.reel/system-section.html
@@ -15,7 +15,8 @@
                     "serialConsole": {"@": "serialConsole"},
                     "debug": {"@": "debug"},
                     "mail": {"@": "mail"},
-                    "dockerSettings": {"@": "dockerSettings"}
+                    "dockerSettings": {"@": "dockerSettings"},
+                    "tunable": {"@": "tunable"}
                 }
             }
         },
@@ -121,6 +122,12 @@
             "properties": {
                 "element": {"#": "system"}
             }
+        },
+        "tunable": {
+            "prototype": "./tunable.reel",
+            "properties": {
+                "element": {"#": "tunable"}
+            }
         }
     }
     </script>
@@ -142,6 +149,7 @@
                 <div data-montage-id="hardware" data-arg="hardware"></div>
                 <div data-montage-id="debug" data-arg="debug"></div>
                 <div data-montage-id="mail" data-arg="mail"></div>
+                <div data-montage-id="tunable" data-arg="tunable"></div>
             </div>
         </div>
     </div>
