--- a/ui/inspectors/share.reel/iscsi-share.reel/iscsi-share.html
+++ b/ui/inspectors/share.reel/iscsi-share.reel/iscsi-share.html
@@ -50,6 +50,7 @@
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
                 "element": {"#": "targetName"},
+                "validationPath": "target.id",
                 "label": "Target name"
             },
             "bindings": {
