--- a/ui/inspectors/snapshot.reel/snapshot.html
+++ b/ui/inspectors/snapshot.reel/snapshot.html
@@ -52,6 +52,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "name"},
+                "validationPath": "name",
                 "label": "Name"
             },
             "bindings": {
@@ -71,6 +72,7 @@
             "prototype": "ui/controls/field-treeview.reel",
             "properties": {
                 "element": {"#": "datasetSelector"},
+                "validationPath": "dataset",
                 "controller": {"@": "datasetTreeController"},
                 "label": "Dataset",
                 "removePrefix": "/mnt/"
