--- a/ui/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/inspectors/virtual-machine.reel/virtual-machine.html
@@ -166,6 +166,7 @@
             "prototype": "blue-shark/ui/field-text.reel",
             "properties": {
                 "element": {"#": "volumeDisplay"},
+                "validationPath": "target",
                 "label": "Volume"
             },
             "bindings": {
