--- a/ui/inspectors/volume-dataset.reel/volume-dataset.html
+++ b/ui/inspectors/volume-dataset.reel/volume-dataset.html
@@ -50,6 +50,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
              "properties": {
                 "element": {"#": "nameInput"},
+                "validationPath": "id",
                 "label": "Name"
              },
              "bindings": {
@@ -60,6 +61,7 @@
             "prototype": "ui/controls/field-treeview.reel",
             "properties": {
                 "element": {"#": "pathSelector"},
+                "validationPath": "volume",
                 "controller": {"@": "datasetTreeController"},
                 "label": "Path"
             },
