Move "address" field from peer form to appropriate child forms

--- a/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
+++ b/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
@@ -10,6 +10,16 @@
                 "element": {"#": "owner"}
             }
         },
+        "address": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "address"},
+                "label": "Address"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.address"}
+            }
+        },
         "port": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
@@ -45,6 +55,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="FreenasCredentials">
+        <div data-montage-id="address"></div>
         <div data-montage-id="port"></div>
         <div data-montage-id="pubkey"></div>
         <div data-montage-id="hostkey"></div>
