--- a/ui/sections/peering/inspectors/ssh-credentials.reel/ssh-credentials.html
+++ b/ui/sections/peering/inspectors/ssh-credentials.reel/ssh-credentials.html
@@ -10,6 +10,16 @@
                 "element": {"#": "owner"}
             }
         },
+        "address": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "address"},
+                "label": "Address"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.address"}
+            }
+        },
         "username": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
@@ -56,6 +66,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="SshCredentials">
+        <div data-montage-id="address"></div>
         <div data-montage-id="username"></div>
         <div data-montage-id="password"></div>
         <div data-montage-id="pubkey"></div>
