--- a/ui/inspectors/system-section.reel/system-section.html
+++ b/ui/inspectors/system-section.reel/system-section.html
@@ -127,6 +127,9 @@
             "prototype": "./tunable.reel",
             "properties": {
                 "element": {"#": "tunable"}
+            },
+            "bindings": {
+                "object": {"<-": "@owner.tunables"}
             }
         }
     }
