--- a/ui/inspectors/system-section.reel/tunable.reel/tunable.html
+++ b/ui/inspectors/system-section.reel/tunable.reel/tunable.html
@@ -9,12 +9,23 @@
             "properties": {
                 "element": {"#": "owner"}
             }
+        },
+        "tunables": {
+            "prototype": "ui/controls/inspector-option.reel",
+            "properties": {
+                "element": {"#": "tunables"}
+            },
+            "bindings": {
+                "object": {"<-": "@owner.tunables"}
+            }
         }
+
     }
     </script>
 </head>
 <body>
     <div data-montage-id="owner" class="Tunable">
+        <div data-montage-id="tunables"></div>
     </div>
 </body>
 </html>
