--- a/ui/inspectors/user.reel/user.html
+++ b/ui/inspectors/user.reel/user.html
@@ -26,7 +26,7 @@
                 "canDelete": {"<-": "!@owner.object.builtin"},
                 "canRevert": {"<-": "(@owner.object.uid == 0) || !@owner.object.builtin"},
                 "canSave": {"<-": "(@owner.object.uid == 0) || !@owner.object.builtin"},
-                "confirmationMessage": {"<-": "'Are you sure you want to delete ' + @owner.object.username + '?'"},
+                "confirmationMessage": {"<-": "'Are you sure you want to delete user ' + @owner.object.username + '?'"},
                 "controller": {"@": "owner"}
             }
         },
