Add missing word to volume delete confirmation message
Ticket: #17179

--- a/ui/inspectors/volume.reel/volume.html
+++ b/ui/inspectors/volume.reel/volume.html
@@ -50,7 +50,7 @@
             "bindings": {
                 "context": {"<-": "@owner.context"},
                 "isConfirmationVisible": {"<-": "@owner.isConfirmationVisible"},
-                "confirmationMessage": {"<-": "'Are you sure you want to delete ' + @owner.object.id + '?'"}
+                "confirmationMessage": {"<-": "'Are you sure you want to delete volume ' + @owner.object.id + '?'"}
             }
         },
         "shares": {
