Move inspector controller from bindings to properties in system section
Ticket: #17179

--- a/ui/inspectors/system-section.reel/system-section.html
+++ b/ui/inspectors/system-section.reel/system-section.html
@@ -23,14 +23,14 @@
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
                 "element": {"#": "inspector"},
-                "canDelete": false
+                "canDelete": false,
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
                 "isLoading": {"<-": "@owner.isLoading"},
                 "canSave": {"<-": "@owner.canSave"},
-                "canRevert": {"<-": "@owner.canRevert"},
-                "controller": {"@": "owner"}
+                "canRevert": {"<-": "@owner.canRevert"}
             }
         },
         "substitution": {
